5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1638_652.log
== SUBMITION (2019-04-09 10:23:27) 
-- CODE:
num = int(input())
if 100 <= n <= 999:
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.149647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/652/main.py", line 2, in <module>
    if 100 <= n <= 999:
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:06) 
-- CODE:
num = int(input())
if 100 <= num <= 999 :
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.138331
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:44) 
-- CODE:
num = int(input())
if 100 <= num <= 999 and num %(num - 100*(num//100)) == 0:
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:49) 
-- CODE:
num = int(input())
if 100 <= num <= 999 and num %(num - 100*(num//100)) == 0:
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:26:55) 
-- CODE:
num = int(input())
if 100 <= num <= 999 and num %(num - 100*(num//100)) == 0:
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.137655
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
